# lucid

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
assets/cheesecake/: license.txt  scene.gltf
assets/happy_shark_swimming/: license.txt  scene.gltf
assets/king_boo_idle_animation/: license.txt  scene.gltf
assets/leica/: scene.gltf
assets/vhs_camera/: scene.gltf
docs/html/: annotated.html  audio_system_8cc.html  audio_system_8cc_source.html  audio_system_8h.html  audio_system_8h_source.html  bounding_box_8h.html  bounding_box_8h_source.html  camera_8cc.html  camera_8cc_source.html  camera_8h.html  camera_8h_source.html  class_audio_system-members.html  class_audio_system.html  class_camera-members.html  class_camera.html  class_collider-members.html  class_collider.html  class_collider_cube-members.html  class_collider_cube.html  class_collider_polygon-members.html  class_collider_polygon.html  class_collider_sphere-members.html  class_collider_sphere.html  class_component_vector-members.html  class_component_vector.html  class_component_vector_container-members.html  class_component_vector_container.html  class_cube-members.html  class_cube.html  class_font-members.html  class_font.html  class_input-members.html  class_input.html  class_line-members.html  class_line.html  class_lucid-members.html  class_lucid.html  class_mesh-members.html  class_mesh.html  class_model-members.html  (+232 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+88 more)
examples/fps/: data.json  engineStartup.h  startup.h
examples/fps/assets/: assets.txt
examples/fps/assets/guardian_zelda_botw_fan-art/: scene.gltf
examples/fps/systems/: fpsSystem.cc  fpsSystem.h  rules.h
examples/lucid-test/: engineStartup.h  startup.h
examples/lucid-test/systems/: testSystem.cc  testSystem.h
examples/pong/: aiSystem.cc  playerSystem.h  pongSystem.h
lib/dbg-macro/: dbg.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/examples/example_sdl_opengl3/: example_sdl_opengl3.vcxproj
lib/stb_image/: stb_image.h
src/: main.cc
src/audio/: SoundEffectsLibrary.cc  musicBuffer.cc  musicBuffer.h  sound.cc  sound.h  soundBuffer.cc  soundBuffer.h  soundDevice.cc  soundDevice.h  soundEffectsLibrary.h  soundEffectsPlayer.cc  soundEffectsPlayer.h
src/constants/: commonEnum.h  constants.h  defaultAssetsEnum.h  windowEnum.h
src/copy/: engineStartup.h  startup.h
src/entity/: component.h  ecs.h  engineComponents.h
src/examples/pong/: aiSystem.cc  aiSystem.h  playerSystem.cc  playerSystem.h  pong.h  pongSystem.cc  pongSystem.h
src/generic/: CMakeLists.txt
src/graphics/: boundingBox.cc  boundingBox.h  camera.cc  camera.h  colliders.cc  colliders.h  cube.cc  cube.h  devStructs.h  font.cc  font.h  gl.cc  gl.h  line.cc  line.h  mesh.cc  mesh.h  model.cc  model.h  primitiveVertex.h  quatCamera.cc  quatCamera.h  ray.h  renderUtils.h  renderer.cc  renderer.h  shader.cc  shader.h  shaderResource.h  shapes.h  sphere.cc  sphere.h
src/input/: input.cc  input.h
src/lucid/: engineStartup.h  lucid.cc  lucid.h  startup.h
src/sandbox/: lucid.cc  lucid.h  sandbox.cc  sandbox.h
src/serialize/: serialize.h
src/shaders/: cube.frag  cube.vert  line.vert  model.frag  model.vert  modelAnimated.vert  primitive.frag  primitive.vert  primitiveBatch.vert  triangle.frag  triangle.vert
src/startup/: engineStartup.h  startup.h
src/systems/: animationSystem.cc  animationSystem.h  audioSystem.cc  audioSystem.h  lucidSystem.cc  lucidSystem.h  physicsSystem.cc  physicsSystem.h  renderSystem.cc  renderSystem.h  uiSystem.cc  uiSystem.h
src/systems/pong/: aiSystem.cc  aiSystem.h  movementSystem.cc  movementSystem.h  playerSystem.cc  playerSystem.h  pong.h  pongSystem.cc
src/ui/: uiUtils.h
src/utils/: errors.h  systemUtils.h  uiUtils.h  utils.h
tests/: test-collision.cc  test-ecs-dynamic.cc  test-ecs.cc  test-utils.h
